@@ -74,36 +74,11 @@ void AddObjectsCommand::unexecute()
   document.mode()->objectsRemoved();
 };
 
-// this function is used by the AddObjectsCommand and
-// RemoveObjectsCommand destructors.  They have to delete the objects
-// they contain, but what this function adds is that they also delete
-// their parents if those are internal and have no more children.
-// Same goes for their deleted parents' parents etc.  This to avoid
-// KigDocument keeping useless DataObjects around after all their
-// children have been deleted..
-static void deleteObjectsAndDeadParents( Objects& os, KigDocument& d )
-{
-  while ( !os.empty() )
-  {
-    Objects tmp;
-    for ( Objects::iterator i = os.begin(); i != os.end(); ++i )
-    {
-      d._delObject( *i );
-      Objects parents = (*i)->parents();
-      delete *i;
-      for ( Objects::iterator j = parents.begin(); j != parents.end(); ++j )
-        if ( (*j)->isInternal() && (*j)->children().empty() && ! os.contains( *j ) )
-          tmp.upush( *j );
-    };
-    os = tmp;
-  };
-};
-
 AddObjectsCommand::~AddObjectsCommand()
 {
   if ( undone )
   {
-    deleteObjectsAndDeadParents( os, document );
+    deleteObjectsAndDeadParents( os, &document );
   };
 }
 
@@ -127,7 +102,7 @@ RemoveObjectsCommand::RemoveObjectsCommand( KigDocument& inDoc, Object* o)
 RemoveObjectsCommand::~RemoveObjectsCommand()
 {
   if (!undone)
-    deleteObjectsAndDeadParents( os, document );
+    deleteObjectsAndDeadParents( os, &document );
 }
 
 void RemoveObjectsCommand::execute()
